fixed social icons alignments

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,3 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-}
